# filefly

./: .gitignore  Cargo.toml  Readme.md  install.ps1  install.sh
.github/workflows/: release.yml
examples/: preview.rs
src/: copy_files_with_progress.rs  filefly_args.rs  logger.rs  main.rs  progress_style.rs
src/file_service/: copy_file_and_folders.rs  delete_file_and_folders.rs  mod.rs  replace_file_and_folders.rs  synchronize_folders.rs
src/handlers/: handle_copy_command.rs  handle_delete_command.rs  handle_replace_command.rs  handle_synchronize_command.rs  handle_upgrade_command.rs  mod.rs
src/lib_file_service/: copy_file_with_progress.rs  mod.rs
src/utils/: mod.rs
