[package]
name = "filefly"
version = "1.0.0"
edition = "2021"
authors = ["Pranta Dutta"]
description = "Better File Utilties"
homepage = "https://github.com/theprantadutta/fliefly"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
chrono = "0.4.38"
indicatif = "0.17.8"
clap = { version = "4.5.20", features = ["derive"] }
