[package]
name = "filefly"
version = "1.1.0"
edition = "2021"
authors = ["Pranta Dutta"]
description = "Better File Utilties"
homepage = "https://github.com/theprantadutta/filefly"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "4"
colorgrad = "0.8"
chrono = "0.4.40"
indicatif = { version = "0.18", features = ["improved_unicode"] }
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.140"
